--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -17,7 +17,7 @@
 
       <% @dishes.each do |dish| %>
       <tr>
-        <td><%= dish.venue_id %></td>
+        <td><%= dish.food.id %></td>
         <td><%= dish.name %></td>
         <td><%= dish.cuisine_id %></td>
         <td>
