--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= dish.food.id %></td>
         <td><%= dish.name %></td>
-        <td><%= dish.cuisine_id %></td>
+        <td><%= dish.cuisine.name %></td>
         <td>
           <a href="/dishes/<%= dish.id %>" class="btn btn-primary">Show</a>
           <a href="/dishes/<%= dish.id %>/edit" class="btn btn-warning">Edit</a>
