--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -17,9 +17,21 @@
 
       <% @dishes.each do |dish| %>
       <tr>
-        <td><%= dish.food.id %></td>
+        <td>
+          <% if dish.food.present? %>
+            <a href="/venues/<%= dish.food.id %>">
+              <%= dish.food.id %>
+            </a>
+          <% end %>
+        </td>
         <td><%= dish.name %></td>
-        <td><%= dish.cuisine.name %></td>
+        <td>
+          <% if dish.cuisine.present? %>
+            <a href="/cuisines/<%= dish.cuisine.id %>">
+              <%= dish.cuisine.name %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/dishes/<%= dish.id %>" class="btn btn-primary">Show</a>
           <a href="/dishes/<%= dish.id %>/edit" class="btn btn-warning">Edit</a>
