--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -9,11 +9,6 @@
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-    <%= f.label :name_cont, "Name contains" %>
-    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
-  </div>
-
-<div class="form-group">
     <%= f.label :neighborhood_cont, "Neighborhood contains" %>
     <%= f.text_field :neighborhood_cont, :class => "form-control", :placeholder => "Neighborhood contains" %>
   </div>
@@ -21,6 +16,11 @@
 <div class="form-group">
     <%= f.label :address_cont, "Address contains" %>
     <%= f.text_field :address_cont, :class => "form-control", :placeholder => "Address contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
   </div>
 
 <div class="form-group">
@@ -63,7 +63,45 @@
           });
       </script>
 
-        
+        <div class="form-group">
+          <%= f.label :created_at, "UserAccount Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='usersgteqcreated_atPicker'>
+                  <%= f.text_field :users_created_at_gteq, :class => "form-control", :placeholder => "UserAccount Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='userslteqcreated_atPicker'>
+                  <%= f.text_field :users_created_at_lteq, :class => "form-control", :placeholder => "UserAccount Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#usersgteqcreated_atPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#userslteqcreated_atPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#usersgteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#userslteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#userslteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#usersgteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
@@ -79,17 +117,17 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
+        <th>Name</th>
         <th>Address</th>
         <th>Neighborhood</th>
-        <th>Name</th>
         <th>Actions</th>
       </tr>
 
       <% @venues.each do |venue| %>
       <tr>
+        <td><%= venue.name %></td>
         <td><%= venue.address %></td>
         <td><%= venue.neighborhood %></td>
-        <td><%= venue.name %></td>
         <td>
           <a href="/venues/<%= venue.id %>" class="btn btn-primary">Show</a>
           <a href="/venues/<%= venue.id %>/edit" class="btn btn-warning">Edit</a>
